# mouse-assist

./: AGENTS.md  Cargo.toml  README.md
config/: example.toml
crates/mouse-assist-config-app/: Cargo.toml
crates/mouse-assist-config-app/src/: main.rs
crates/mouse-assist-core/: Cargo.toml
crates/mouse-assist-core/src/: lib.rs
crates/mouse-assist-daemon/: Cargo.toml
crates/mouse-assist-daemon/src/: main.rs
systemd/: mouse-assist.service
